<resources>
    <string name="app_name">Amazing Movies</string>

    <string name="accept">Aceptar</string>
    <string name="amazing">Amazing</string>
    <string name="movies">Movies</string>

    <!-- Dashboard -->
    <string name="home">Inicio</string>
    <string name="popular">Populares</string>
    <string name="top_rated">Lo mejor</string>
    <string name="upcoming">Próximamente</string>
    <string name="search">Buscar</string>

    <!-- Home Fragment-->
    <string name="wellcome">Bienvenido</string>
    <string name="category">Categorías</string>
    <string name="service_fail">Error al obtener la información</string>

    <!-- Movie Detail Fragment -->
    <string name="popularity">%1$s</string>
    <string name="date">Fecha: %1$s</string>
    <string name="original_language">Idioma original: %1$s</string>
    <string name="overview">%1$s</string>

    <!-- Search Fragment -->
    <string name="search_genre">Busca un género de peliculas</string>
    <string name="search_fragment">Buscar</string>
    <string name="not_found">No existen peliculas con ese genero</string>

</resources>
