<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".splash.SplashFragment"
        android:background="@color/colorPrimary">


    <TextView
            android:text="@string/amazing"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSize80sp"
            android:fontFamily="@font/marker_felt_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/splash_amazing"
            android:layout_marginTop="280dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.469"
    />

    <TextView
            android:text="@string/movies"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSize40sp"
            android:fontFamily="@font/marker_felt_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/splash_movie"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/splash_amazing"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/startsContainer"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/splash_movie"
            app:layout_constraintTop_toBottomOf="@+id/splash_amazing">

        <ImageView
                android:src="@drawable/ic_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_one"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toStartOf="@+id/start_two"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
                android:src="@drawable/ic_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_two"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toEndOf="@+id/start_one"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/start_three"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
                android:src="@drawable/ic_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_three"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toEndOf="@+id/start_two"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/start_four"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
                android:src="@drawable/ic_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_four"
                app:layout_constraintStart_toEndOf="@+id/start_three"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/start_five"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
                android:src="@drawable/ic_start"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:id="@+id/start_five"
                app:layout_constraintStart_toEndOf="@+id/start_four"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>