<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/standardDimen40dp"
                android:background="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:text="@string/category"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textSize22sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                android:layout_marginStart="@dimen/standardDimen8dp"
                android:layout_marginEnd="@dimen/standardDimen8dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardDimen8dp"
                android:id="@+id/container_popular"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewPopular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standardDimen8dp"
                    android:layout_marginEnd="@dimen/standardDimen8dp"
                    android:scrollbars="horizontal"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/popular_category" />

            <TextView
                    android:text="@string/popular"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize18sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/popular_category"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/standardDimen8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/standardDimen8dp"
                    app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBarPopular"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/standardDimen8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/standardDimen8dp"
                    android:layout_marginTop="@dimen/standardDimen8dp"
                    app:layout_constraintTop_toBottomOf="@+id/popular_category" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container_top_rated"
                app:layout_constraintTop_toBottomOf="@+id/container_popular"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginTop="@dimen/standardDimen8dp">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewRated"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standardDimen8dp"
                    android:layout_marginEnd="@dimen/standardDimen8dp"
                    android:scrollbars="horizontal"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/rated_category" />

            <TextView
                    android:text="@string/top_rated"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize18sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rated_category"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/standardDimen8dp"
                    app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBarRated"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/standardDimen8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/standardDimen8dp"
                    android:layout_marginTop="@dimen/standardDimen8dp"
                    app:layout_constraintTop_toBottomOf="@+id/rated_category" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container_upcoming"
                app:layout_constraintTop_toBottomOf="@+id/container_top_rated"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginTop="@dimen/standardDimen8dp">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewUpcoming"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standardDimen8dp"
                    android:layout_marginEnd="@dimen/standardDimen8dp"
                    android:scrollbars="horizontal"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/upcoming_category" />

            <TextView
                    android:text="@string/upcoming"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize18sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/upcoming_category"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/standardDimen8dp"
                    app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBarUpcoming"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/standardDimen8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/standardDimen8dp"
                    android:layout_marginTop="@dimen/standardDimen8dp"
                    app:layout_constraintTop_toBottomOf="@+id/upcoming_category" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>